project(camera_nodes)
add_library(${PROJECT_NAME} SHARED src/camera_simulator_node.cpp src/camera_node.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(${PROJECT_NAME} PUBLIC ${Pylon_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC common)
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${Pylon_LIBRARIES})
target_link_libraries(${PROJECT_NAME} PUBLIC boost_circular_buffer)
target_link_libraries(${PROJECT_NAME} PUBLIC msg)
target_link_libraries(${PROJECT_NAME} PUBLIC node)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

project(test_camera_node)
add_executable(${PROJECT_NAME} test/test_camera_node.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC camera_nodes)
target_link_libraries(${PROJECT_NAME} PUBLIC visualization_nodes)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

project(test_camera)

add_executable(${PROJECT_NAME} test/test_camera.cpp)
target_link_libraries(${PROJECT_NAME} PUBLIC camera_nodes)
target_link_libraries(${PROJECT_NAME} PUBLIC visualization_nodes)
target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_23)
target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

project(test_image_conversion)

add_executable(${PROJECT_NAME} test/test_image_conversion.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${Pylon_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${Pylon_LIBRARIES})
target_link_libraries(${PROJECT_NAME} PUBLIC common)
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

project(test_camera_name_and_id)

add_executable(${PROJECT_NAME} test/test_camera_name_and_id.cpp)
target_include_directories(${PROJECT_NAME} PUBLIC ${Pylon_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${Pylon_LIBRARIES})
target_link_libraries(${PROJECT_NAME} PUBLIC common)
target_link_libraries(${PROJECT_NAME} PUBLIC ${OpenCV_LIBS})
target_compile_definitions(${PROJECT_NAME} PUBLIC CMAKE_SOURCE_DIR="${CMAKE_SOURCE_DIR}")

